# resume-generator

./: .gitignore  LICENSE  README.md  ResumeGenerator.spec  ai_merge_cache.json  build_exe.bat  build_version_info.py  main.py  project_architecture.md  pyproject.toml  run_gui.bat
.agents/: mcp_config.json
.github/workflows/: cleanup.yml  release.yml
assets/: style.qss
core/: models.py  prompt_template.py
electron-app/: .form_backup.tsx  .gitignore  index.html  package-lock.json  package.json  resume.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
electron-app/.github/instructions/: react.instructions.md
electron-app/dist-electron/: main.js  preload.js
electron-app/electron/: UpdateManager.ts  main.ts  preload.ts
electron-app/src/: App.tsx  index.css  mcp-server.ts
electron-app/src/components/: CompilationError.tsx  index.ts  (+7 more)
gui/: config.py  logger.py  main_window.py  models.py  protocols.py  ui_helpers.py  utils.py  worker.py
gui/services/: ai_merger.py  deepseek_client.py  file_manager.py  library_service.py  update_checker.py
gui/widgets/: action_panel.py  format_toolbar.py  json_editor.py  library_tab.py  log_panel.py  prompt_tab.py  provider_dialog.py  quick_create_tab.py  template_tab.py  vertical_action_panel.py
script/: builder.py  config.py  escaper.py  generate_resume.py  protocols.py  service.py
script/templates/: TEMPLATE_GUIDE.md  classic.tex  experiment.tex
templates/: classic.tex  experiment.tex  german.tex
tests/: conftest.py  test_builder.py  test_duration_picker.py  test_escaper.py  test_models.py
(+49 files in other folders)
