[project]
name = "resume-automation"
version = "0.1.0"
description = "PySide6 GUI for generating LaTeX resumes via Jinja2 + xelatex"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.0.0",
    "pygments>=2.15.0",
    "pyside6>=6.6.0",
    "pytest>=9.0.2",
    "qasync>=0.28.0",
    "qtawesome>=1.4.1",
    "rapidfuzz>=3.14.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pillow>=12.1.1",
    "pyinstaller>=6.19.0",
]
